[tool.poetry]
name = "imgease"
version = "0.2.0"
description = "A collection of CLI tools for image processing."
authors = ["am2b"]
readme = "README.md"
packages = [{ include = "imgease", from = "src" }]

[tool.poetry.scripts]
imgease-grayscale = "imgease.grayscale:main"
imgease-convert = "imgease.convert:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
pillow = "^10.4.0"
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
